Better error messages for auth. endpoint
